block-10/1/k8s/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-database
  labels:
    app: counter-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-database
  template:
    metadata:
      labels:
        app: counter-database
    spec:
      containers:
        - name: counter-database
          image: registry.redhat.io/rhel8/postgresql-15:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: counter-database-data
      volumes:
        - name: counter-database-data
          persistentVolumeClaim:
            claimName: counter-database-data

---
apiVersion: v1
kind: Service
metadata:
  name: counter-database
spec:
  selector:
    app: counter-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
