block-10/1/k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
  labels:
    app: counter-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/mariotraub/counter-backend:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
spec:
  selector:
    app: counter-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-backend
  name: counter-backend
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: counter-backend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
