block-10/1/k8s/pg-admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-pgadmin
  labels:
    app: counter-pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-pgadmin
  template:
    metadata:
      labels:
        app: counter-pgadmin
    spec:
      containers:
        - name: counter-pgadmin
          image: ghcr.io/modul-i-ch-109/pgadmin4:latest
          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: counter-pgadmin
spec:
  selector:
    app: counter-pgadmin
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-pgadmin
  name: counter-pgadmin
spec:
  port:
    targetPort: 5050
  to:
    kind: Service
    name: counter-pgadmin
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
